--- a/products-dash.html
+++ b/products-dash.html
@@ -1,286 +1,323 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Product Creator</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Admin Product Editor</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: "Segoe UI", sans-serif;
+      background: #f1f3f6;
+      padding: 30px;
       margin: 0;
-      background-color: #f5f7fa;
-      padding: 20px;
     }
-    h2 {
-      text-align: center;
-      color: #1976d2;
-      margin-bottom: 20px;
-    }
-    form {
+
+    .container {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 30px;
       max-width: 1200px;
       margin: auto;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 15px;
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
-    input, textarea {
+
+    h2 {
+      grid-column: span 2;
+      text-align: center;
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 14px;
+      padding: 24px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.06);
+    }
+
+    label {
+      font-weight: 600;
+      margin-top: 12px;
+      display: block;
+    }
+
+    input, textarea, select {
       width: 100%;
       padding: 10px;
-      border-radius: 6px;
+      margin-top: 5px;
+      font-size: 15px;
       border: 1px solid #ccc;
-      font-size: 14px;
+      border-radius: 8px;
     }
-    input[type="submit"] {
-      background: #1976d2;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      border: none;
+
+    textarea {
+      resize: vertical;
     }
-    .preview, .product-list {
-      max-width: 1200px;
-      margin: 30px auto;
-      background: #fff;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+
+    .tag-box {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 8px;
     }
+
+    .tag-box label {
+      background: #e0f7fa;
+      padding: 6px 12px;
+      border-radius: 20px;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+
     .preview img {
       width: 100%;
-      max-width: 300px;
-      max-height: 200px;
+      height: auto;
+      max-height: 250px;
       object-fit: cover;
-      border-radius: 8px;
-      display: block;
-      margin-bottom: 10px;
+      border-radius: 10px;
+      margin-bottom: 15px;
     }
-    .tag {
-      display: inline-block;
-      background: #1976d2;
-      color: white;
-      padding: 4px 8px;
-      border-radius: 4px;
-      margin: 2px;
+
+    .preview .tag {
+      background: #f1f8e9;
+      color: #33691e;
       font-size: 12px;
+      padding: 4px 10px;
+      border-radius: 50px;
+      margin-right: 5px;
     }
-    .field {
-      margin-bottom: 10px;
-    }
-    .field strong {
-      color: #555;
-    }
-    .product-card {
-      border: 1px solid #ccc;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .product-card img {
-      height: 60px;
-      width: 60px;
-      object-fit: cover;
-      border-radius: 4px;
-      margin-right: 10px;
-    }
-    .product-card button {
-      padding: 5px 10px;
-      margin-left: 5px;
+
+    button {
+      background: #388e3c;
+      color: white;
+      padding: 12px 24px;
       border: none;
-      border-radius: 4px;
+      border-radius: 10px;
+      font-size: 16px;
       cursor: pointer;
+      transition: background 0.3s;
+      margin-top: 15px;
     }
-    .edit-btn {
-      background-color: #ffa726;
-      color: white;
+
+    button:hover {
+      background: #2e7d32;
     }
-    .delete-btn {
-      background-color: #ef5350;
-      color: white;
+
+    .product-select {
+      margin-bottom: 15px;
     }
-    @media (max-width: 600px) {
-      .preview {
-        padding: 10px;
+
+    @media (max-width: 768px) {
+      .container {
+        grid-template-columns: 1fr;
       }
     }
   </style>
 </head>
-<body>  <h2>Admin Product Creator</h2>  <form id="productForm">
-    <input type="hidden" id="docId">
-    <input type="text" id="name" placeholder="Product Name" required>
-    <input type="text" id="brand" placeholder="Brand">
-    <input type="text" id="category" placeholder="Category">
-    <textarea id="desc" placeholder="Description"></textarea>
-    <input type="number" id="price" placeholder="Price">
-    <input type="number" id="discount" placeholder="Discount %">
-    <input type="number" id="stock" placeholder="Stock">
-    <input type="number" id="rating" placeholder="Rating" step="0.1">
-    <input type="text" id="tags" placeholder="Tags (comma separated)">
-    <input type="url" id="imageUrl" placeholder="Image URL">
-    <input type="submit" value="Save Product">
-  </form>  <div class="preview">
-    <h3>Live Preview</h3>
-    <img id="previewImage" src="https://via.placeholder.com/300x200?text=Preview" alt="Preview Image">
-    <div class="field"><strong>Name:</strong> <span id="pname"></span></div>
-    <div class="field"><strong>Brand:</strong> <span id="pbrand"></span></div>
-    <div class="field"><strong>Category:</strong> <span id="pcategory"></span></div>
-    <div class="field"><strong>Price:</strong> ₹<span id="pprice"></span></div>
-    <div class="field"><strong>Stock:</strong> <span id="pstock"></span></div>
-    <div class="field"><strong>Rating:</strong> <span id="prating"></span></div>
-    <div class="field"><strong>Description:</strong> <span id="pdesc"></span></div>
-    <div class="field"><strong>Tags:</strong> <span id="ptags"></span></div>
-  </div>  <div class="product-list">
-    <h3>All Products</h3>
-    <div id="productContainer"></div>
-  </div>  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-    import { getFirestore, doc, getDoc, setDoc, updateDoc, deleteDoc, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+<body>
+
+  <div class="container">
+    <h2>Admin Product Manager</h2>
+
+    <div class="card">
+      <select id="productSelector" class="product-select">
+        <option value="">➕ Create New Product</option>
+      </select>
+
+      <form id="productForm" oninput="updatePreview()">
+        <label>Product Name</label>
+        <input type="text" id="name" required>
+
+        <label>Price (INR)</label>
+        <input type="number" id="price" min="0" required>
+
+        <label>Stock</label>
+        <input type="number" id="stock" min="0" value="0">
+
+        <label>Category</label>
+        <input type="text" id="category" required>
+
+        <label>Brand</label>
+        <input type="text" id="brand">
+
+        <label>Image URL</label>
+        <input type="text" id="imageUrl" placeholder="https://example.com/image.jpg" required>
+
+        <label>Description</label>
+        <textarea id="desc" rows="4" required></textarea>
+
+        <label>Rating (0–5)</label>
+        <input type="number" id="rating" step="0.1" min="0" max="5">
+
+        <label>Discount (%)</label>
+        <input type="number" id="discount" min="0" max="100">
+
+        <label>Tags</label>
+        <div class="tag-box">
+          <label><input type="checkbox" name="tag" value="Popular"> Popular</label>
+          <label><input type="checkbox" name="tag" value="New Arrival"> New Arrival</label>
+          <label><input type="checkbox" name="tag" value="Limited Offer"> Limited Offer</label>
+        </div>
+
+        <button type="button" onclick="handleSubmit()">💾 Save Product</button>
+      </form>
+    </div>
+
+    <div class="card preview">
+      <img id="previewImage" src="https://via.placeholder.com/300x200?text=Product+Image" alt="Preview">
+      <h3 id="previewName">Product Name</h3>
+      <p><strong>₹</strong><span id="previewPrice">0.00</span></p>
+      <p><strong>Category:</strong> <span id="previewCategory">Category</span></p>
+      <p><strong>Brand:</strong> <span id="previewBrand">Brand</span></p>
+      <p id="previewDesc">Product description appears here.</p>
+      <div id="previewTags"></div>
+    </div>
+  </div>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getFirestore, collection, getDocs, doc, addDoc, updateDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyAbknkfD6Je1a3wDZRTzn6c62CNUhhwLc",
-      authDomain: "store-471f1.firebaseapp.com",
-      projectId: "store-471f1",
-      storageBucket: "store-471f1.appspot.com",
-      messagingSenderId: "619523242611",
-      appId: "1:619523242611:web:fdfa53044c62f844574806",
-      measurementId: "G-16C8MYT70G"
+      
     };
 
     const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
     const db = getFirestore(app);
+    const auth = getAuth(app);
 
-    const form = document.getElementById('productForm');
-    const container = document.getElementById('productContainer');
+    let editingId = null;
 
-    const fieldMap = {
-      name: 'pname', brand: 'pbrand', category: 'pcategory', price: 'pprice',
-      stock: 'pstock', rating: 'prating', desc: 'pdesc', imageUrl: 'previewImage'
+    const form = {
+      name: document.getElementById("name"),
+      price: document.getElementById("price"),
+      stock: document.getElementById("stock"),
+      category: document.getElementById("category"),
+      brand: document.getElementById("brand"),
+      imageUrl: document.getElementById("imageUrl"),
+      desc: document.getElementById("desc"),
+      rating: document.getElementById("rating"),
+      discount: document.getElementById("discount"),
+      tags: document.querySelectorAll("input[name='tag']"),
     };
 
-    function updatePreview() {
-      Object.entries(fieldMap).forEach(([inputId, spanId]) => {
-        const input = document.getElementById(inputId);
-        const output = document.getElementById(spanId);
-        if (input && output) {
-          if (inputId === 'imageUrl') {
-            output.src = input.value || 'https://via.placeholder.com/300x200?text=Preview';
-          } else {
-            output.textContent = input.value;
-          }
-        }
-      });
+    const preview = {
+      name: document.getElementById("previewName"),
+      price: document.getElementById("previewPrice"),
+      category: document.getElementById("previewCategory"),
+      brand: document.getElementById("previewBrand"),
+      desc: document.getElementById("previewDesc"),
+      tags: document.getElementById("previewTags"),
+      image: document.getElementById("previewImage"),
+    };
 
-      const tagsInput = document.getElementById('tags').value;
-      const tagsContainer = document.getElementById('ptags');
-      tagsContainer.innerHTML = '';
-      tagsInput.split(',').filter(tag => tag.trim()).forEach(tag => {
-        const span = document.createElement('span');
-        span.className = 'tag';
-        span.textContent = tag.trim();
-        tagsContainer.appendChild(span);
-      });
-    }
+    const productSelector = document.getElementById("productSelector");
 
-    function renderProducts(products) {
-      container.innerHTML = '';
-      products.forEach(doc => {
-        const data = doc.data();
-        const div = document.createElement('div');
-        div.className = 'product-card';
-        div.innerHTML = `
-          <div style="display: flex; align-items: center;">
-            <img src="${data.imageUrl}" alt="img">
-            <div>
-              <div><strong>${data.name}</strong></div>
-              <div>₹${data.price} | ${data.stock} in stock</div>
-            </div>
-          </div>
-          <div>
-            <button class="edit-btn" onclick="editProduct('${doc.id}')">Edit</button>
-            <button class="delete-btn" onclick="deleteProduct('${doc.id}')">Delete</button>
-          </div>
-        `;
-        container.appendChild(div);
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) {
+        alert("You must be logged in as admin.");
+        window.location.href = "index.html";
+        return;
+      }
+
+      const userDoc = await getDoc(doc(db, "users", user.uid));
+      if (!userDoc.exists() || userDoc.data().role !== "admin") {
+        alert("Access denied. Admins only.");
+        window.location.href = "index.html";
+        return;
+      }
+
+      loadProductOptions();
+    });
+
+    async function loadProductOptions() {
+      const snapshot = await getDocs(collection(db, "products"));
+      productSelector.innerHTML = `<option value="">➕ Create New Product</option>`;
+      snapshot.forEach(docSnap => {
+        const data = docSnap.data();
+        productSelector.innerHTML += `<option value="${docSnap.id}">${data.name}</option>`;
       });
     }
 
-    window.editProduct = async (id) => {
-      const snap = await getDoc(doc(db, 'products', id));
-      if (snap.exists()) {
-        const p = snap.data();
-        for (let key in p) {
-          if (document.getElementById(key)) document.getElementById(key).value = p[key];
-        }
-        document.getElementById('docId').value = id;
+    productSelector.addEventListener("change", async () => {
+      const id = productSelector.value;
+      if (!id) {
+        formReset();
+        return;
+      }
+
+      editingId = id;
+      const docSnap = await getDoc(doc(db, "products", id));
+      if (docSnap.exists()) {
+        const data = docSnap.data();
+        form.name.value = data.name;
+        form.price.value = data.price;
+        form.stock.value = data.stock || 0;
+        form.category.value = data.category;
+        form.brand.value = data.brand || "";
+        form.imageUrl.value = data.imageUrl;
+        form.desc.value = data.desc;
+        form.rating.value = data.rating || 0;
+        form.discount.value = data.discount || 0;
+
+        form.tags.forEach(t => t.checked = data.tags?.includes(t.value));
         updatePreview();
       }
-    };
-
-    window.deleteProduct = async (id) => {
-      if (confirm('Delete this product?')) {
-        await deleteDoc(doc(db, 'products', id));
-        loadProducts();
-      }
-    };
-
-    async function loadProducts() {
-      const snapshot = await getDocs(collection(db, 'products'));
-      renderProducts(snapshot.docs);
-    }
-
-    document.querySelectorAll('input, textarea').forEach(el => {
-      el.addEventListener('input', updatePreview);
     });
 
-    onAuthStateChanged(auth, async user => {
-      if (!user) return location.href = '/login.html';
-      const userRef = doc(db, 'users', user.uid);
-      const userSnap = await getDoc(userRef);
-      if (!userSnap.exists() || userSnap.data().role !== 'admin') {
-        alert("Access denied: Admins only");
-        return location.href = '/login.html';
-      }
-      loadProducts();
-    });
+    window.updatePreview = function () {
+      preview.name.textContent = form.name.value || "Product Name";
+      preview.price.textContent = form.price.value || "0.00";
+      preview.category.textContent = form.category.value || "Category";
+      preview.brand.textContent = form.brand.value || "Brand";
+      preview.desc.textContent = form.desc.value || "Product description appears here.";
+      preview.image.src = form.imageUrl.value || "https://via.placeholder.com/300x200?text=Product+Image";
 
-    form.addEventListener('submit', async e => {
-      e.preventDefault();
-      const data = {
-        name: name.value,
-        brand: brand.value,
-        category: category.value,
-        desc: desc.value,
-        price: +price.value,
-        discount: +discount.value,
-        stock: +stock.value,
-        rating: +rating.value,
-        tags: tags.value.split(',').map(t => t.trim()),
-        imageUrl: imageUrl.value,
-        updatedAt: new Date().toISOString()
+      preview.tags.innerHTML = "";
+      form.tags.forEach(tag => {
+        if (tag.checked) {
+          preview.tags.innerHTML += `<span class="tag">${tag.value}</span>`;
+        }
+      });
+    };
+
+    window.handleSubmit = async function () {
+      const product = {
+        name: form.name.value.trim(),
+        price: parseFloat(form.price.value),
+        stock: parseInt(form.stock.value),
+        category: form.category.value.trim(),
+        brand: form.brand.value.trim(),
+        imageUrl: form.imageUrl.value.trim(),
+        desc: form.desc.value.trim(),
+        rating: parseFloat(form.rating.value) || 0,
+        discount: parseFloat(form.discount.value) || 0,
+        tags: Array.from(form.tags).filter(t => t.checked).map(t => t.value)
       };
-      const id = docId.value;
+
       try {
-        if (id) {
-          await updateDoc(doc(db, 'products', id), data);
-          alert('Product updated!');
+        if (editingId) {
+          await updateDoc(doc(db, "products", editingId), product);
+          alert("Product updated!");
         } else {
-          await addDoc(collection(db, 'products'), data);
-          alert('Product created!');
+          await addDoc(collection(db, "products"), product);
+          alert("Product created!");
         }
-        form.reset();
-        updatePreview();
-        loadProducts();
-      } catch (err) {
-        console.error('Error saving product:', err);
-        alert('Error saving product');
+        formReset();
+        loadProductOptions();
+      } catch (e) {
+        console.error(e);
+        alert("Something went wrong.");
       }
-    });
-  </script></body>
+    };
+
+    function formReset() {
+      editingId = null;
+      document.getElementById("productForm").reset();
+      updatePreview();
+      productSelector.value = "";
+    }
+  </script>
+</body>
 </html>
