--- a/products-dash.html
+++ b/products-dash.html
@@ -180,7 +180,13 @@
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js";
 
     const firebaseConfig = {
-      
+      apiKey: "AIzaSyAbknkfD6Je1a3wDZRTzn6lC62CNUhhwLc",
+  authDomain: "store-471f1.firebaseapp.com",
+  projectId: "store-471f1",
+  storageBucket: "store-471f1.appspot.com",
+  messagingSenderId: "619523242611",
+  appId: "1:619523242611:web:fdfa53044c62f844574806",
+  measurementId: "G-16C8MYT70G"
     };
 
     const app = initializeApp(firebaseConfig);
